# ifcplusplus

./: .gitignore  CMakeLists.txt
IFCPlugin/: CMakeLists.txt  GLDIfc2OsgNodePlugin.cpp  GLDIfc2OsgNodePlugin.h
IfcPlusPlus/: CMakeLists.txt
IfcPlusPlus/src/ifcpp/geometry/: CurveConverter.h  MeshOps.cpp  MeshOps.h
IfcPlusPlus/src/ifcpp/reader/: ReaderSTEP.cpp
examples/CreateIfcWallAndWriteFile/: CMakeLists.txt
examples/LoadFileExample/: CMakeLists.txt
examples/SimpleViewerExampleQt/: CMakeLists.txt
examples/SimpleViewerExampleQt/src/: IfcPlusPlusSystem.cpp
examples/SimpleViewerExampleQt/src/gui/: OpenFileWidget.cpp
